# 84100343-Deep-Learning

./: .cspell.json  .envrc  .gitignore  .ruff.toml  pyproject.toml  pyrightconfig.json
hw1/attachment/: .gitignore
hw1/attachment/CNN/: main.py  models.py
hw1/attachment/MLP/: data_loader.py  model.py  run.py  trainer.py
hw1/attachment/MLP/utils/: tools.py
hw1/submit/part1/: report.md
hw1/submit/part2/: README.md
hw1/submit/part2/MLP/: .gitignore  data_loader.py  model.py  run.py  sweep.py  trainer.py
hw1/submit/part2/MLP/utils/: tools.py
hw1/submit/part3/: README.md  sweep.yaml  task1.py  task2.py  task3.py  task5.py  train.py
hw1/submit/part3/fig/task2/: .gitignore
hw1/submit/part3/scripts/: prepare.sh
hw1/submit/scripts/: pack.sh
hw2/attachment/gnn/: gat.py  gcn.py  graphsage.py
hw2/attachment/rnn/: car_world_model.py
hw2/submit/: README.md
hw2/submit/part1-rnn/: .envrc  README.md  main.py  task1.py  task2.py  task3.py
hw2/submit/part2-gnn/: .envrc  .gitignore  README.md  gat.py  gcn.py  gin.py  graphsage.py  statistics.md
hw2/submit/scripts/: pack.sh
hw3/attachment/fm/: attention.py  configs.py  dataset.py  gpt.py  loss.py  test.py  tokenizer.py  train_dpo.py  train_sft.py  trainers.py
hw3/attachment/gm/: configs.py  diffusion.py  loss.py  model.py  module.py  train_ldm.py  train_vae.py  train_vae_mnist.py  trainers.py
hw3/submit/: README.md
hw3/submit/fm/: .gitignore  README.md  attention.py  configs.py  dataset.py  gpt.py  loss.py  test.py  tokenizer.py  train_dpo.py  train_sft.py  trainers.py
hw3/submit/fm/scripts/: prepare.sh
hw3/submit/gm/: README.md  configs.py  diffusion.py  loss.py  model.py  module.py  train_ldm.py  train_vae.py  train_vae_mnist.py  trainers.py
hw3/submit/scripts/: crop.sh  pack.sh
