[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "matplotlib>=3.9.2,<4",
  "numpy>=2.1.2,<3",
  "opencv-python>=4.10.0.84,<5",
  "pandas>=2.2.3,<3",
  "scikit-learn>=1.5.2,<2",
  "torch>=2.5.1,<3",
  "tqdm>=4.66.6,<5",
  "wandb>=0.18.5,<0.19",
]
description = "Add a short description here"
name = "deep-learning"
requires-python = ">= 3.12"
version = "0.0.0"

[project.optional-dependencies]
dev = ["icecream"]

[tool.pixi.environments]
cpu = ["dev"]
cu124 = ["dev"]
default = ["dev"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]
