[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "beartype>=0.19.0,<0.20",
  "captum>=0.7.0,<0.8",
  "jaxtyping>=0.2.36,<0.3",
  "liblaf-toolkit>=0.0.11,<0.0.12",
  "matplotlib>=3.9.2,<4",
  "medmnist>=3.0.2,<4",
  "opencv-python>=4.10.0.84,<5",
  "pandas>=2.2.3,<3",
  "polars>=1.15.0,<2",
  "pooch>=1.8.2,<2",
  "rich>=13.9.4,<14",
  "scikit-learn>=1.5.2,<2",
  "seaborn>=0.13.2,<0.14",
  "tqdm>=4.66.6,<5",
  "wandb>=0.19,<0.20",
]
description = "Add a short description here"
name = "deep-learning"
requires-python = ">=3.12,<3.13"
version = "0.0.0"

[project.optional-dependencies]
dev = ["icecream"]

[tool.pixi.dependencies]
numpy = ">=2.1.3,<3"
pyg = { channel = "pyg", version = ">=2.6.1,<3" }
pytorch = { channel = "pytorch", version = "2.4.*" }
pytorch-cuda = { channel = "pytorch", version = "12.4.*" }
torchmetrics = ">=1.5.2,<2"
torchvision = { channel = "pytorch", version = ">=0.19.1,<0.20" }

[tool.pixi.environments]
default = ["dev"]

[tool.pixi.project]
channels = ["conda-forge", "nvidia", "pyg", "pytorch"]
platforms = ["linux-64"]
